logs/sam3d_5239317.err
  File "/dss/dsshome1/0D/ru47tac2/projects/segrap2025/SAM-Med3D/train.py", line 526
    (str{e})
     ^^^^^^
SyntaxError: f-string: invalid syntax. Perhaps you forgot a comma?
